--- a/app/src/main/res/layout/activity_influencer_program_detail_screen.xml
+++ b/app/src/main/res/layout/activity_influencer_program_detail_screen.xml
@@ -23,7 +23,7 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
             app:contentScrim="@color/colorPrimary" >
 
             <!-- app:layout_collapseMode : parallax means an animation effect,
@@ -50,7 +50,7 @@
     </android.support.design.widget.AppBarLayout>
 
 
-    <android.support.v7.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:id="@+id/cardview_data_count"
         android:layout_height="match_parent"
@@ -58,9 +58,10 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
+        android:background="@drawable/collopasing_linear"
         android:layout_below="@+id/collapsing_toolbar_appbarlayout"
         card-view:cardElevation="5dp"
-        card_view:cardCornerRadius="20dp">
+        card_view:cardCornerRadius="30dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -68,7 +69,7 @@
 
 
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 
 
 
