--- a/app/src/main/res/layout/activity_influencer_program_detail_screen.xml
+++ b/app/src/main/res/layout/activity_influencer_program_detail_screen.xml
@@ -81,6 +81,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="#c76a22"
+                    android:id="@+id/expire_days_left_txt"
                     android:text="  150 days left to expire"/>
             </LinearLayout>
 
@@ -104,6 +105,18 @@
                     android:textSize="12sp"
                     android:text="* Offer only valid on Mobile"
                     android:layout_height="wrap_content" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="10px"
+                    android:textSize="12sp"
+                    android:id="@+id/termsCondition_view_more"
+                    android:textColor="@color/colorPrimary"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:text=" View More"/>
+
+
 
             </LinearLayout>
             <View
