--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,11 @@
         <item name="android:textColorPrimary">#ffffff</item>
     </style>
 
+
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/dialog_terms_cond</item>
+        <item name="android:windowExitAnimation">@anim/dialog_terms_cond_slide_out</item>
+    </style>
+    
+
 </resources>
