--- a/app/src/main/res/layout/popup_terms_condition.xml
+++ b/app/src/main/res/layout/popup_terms_condition.xml
@@ -49,6 +49,7 @@
             android:paddingTop="15dp"
             android:layout_marginRight="20dp"
             android:textSize="15sp"
+            android:lineSpacingExtra="4dp"
             />
 
 
