--- a/app/src/main/res/layout/activity_withdraw_money.xml
+++ b/app/src/main/res/layout/activity_withdraw_money.xml
@@ -1,6 +1,93 @@
-<LinearLayout android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/withdraw_constraint_layout"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-</LinearLayout>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/withdraw_btn_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/curr_bal_withdrawpage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/curr_bal_withdrawpage"
+        android:layout_width="0dp"
+        android:layout_height="65dp"
+        android:orientation="horizontal"
+        android:weightSum="5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:text="Balance  ₹25"
+        android:textSize="18sp"
+        android:background="#180a0a09"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        app:layout_constraintTop_toBottomOf="@+id/withdraw_btn_toolbar" />
+
+    <LinearLayout
+        android:id="@+id/ll_to_paytm"
+        android:layout_width="0dp"
+        android:layout_height="90dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/curr_bal_withdrawpage">
+
+        <TextView
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/circle_image" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="15dp"
+            android:gravity="center"
+            android:text="To Paytm Account"
+            android:textColor="@color/black"
+            android:textSize="19sp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#180a0a09"
+        android:orientation="vertical"
+        android:weightSum="10"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_to_paytm">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:layout_weight="9"
+            android:lineSpacingExtra="4dp"
+            android:id="@+id/t_c_withdraw_paytm"
+            android:text="Cash withdrawal rules : "
+            android:textSize="18sp" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_margin="25dp"
+            android:id="@+id/withdraw_btn_withdrawpage"
+            android:layout_weight="0.5"
+            android:background="@drawable/button_rounded"
+            android:text="Withdraw"
+            android:textColor="@color/white"
+            android:textSize="19sp" />
+
+    </LinearLayout>
+
+
+</android.support.constraint.ConstraintLayout>
